Update worker URL in index.html

--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
         loadArchivedCount();
 
         // Subscribe functionality
-        const WORKER_URL = 'https://qualityjobs-subscriptions.YOUR_SUBDOMAIN.workers.dev';
+        const WORKER_URL = 'https://qualityjobs-subscriptions.dpenko.workers.dev';
 
         const subscribeBtn = document.getElementById('subscribe-btn');
         const subscribeModal = document.getElementById('subscribe-modal');
